k8s/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: remyperu-web
  labels:
    app.kubernetes.io/name: remyperu-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: remyperu-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: remyperu-web
    spec:
      containers:
        - name: remyperu-web
          image: "kilbiller/remyperu.fr:v2.0.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
