k8s/deployment.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: remyperu
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'remyperu.fr' ) {
        rewrite ^ https://www.remyperu.fr$request_uri permanent;
      }
spec:
  rules:
    - host: remyperu.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: remyperu
              servicePort: 8000
    - host: www.remyperu.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: remyperu
              servicePort: 8000
  tls:
    - hosts:
        - remyperu.fr
        - www.remyperu.fr
      secretName: remyperu.fr-tls
---
kind: Service
apiVersion: v1
metadata:
  name: remyperu
spec:
  selector:
    app: remyperu
  ports:
    - port: 8000
      targetPort: 8000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: remyperu
spec:
  selector:
    matchLabels:
      app: remyperu
  template:
    metadata:
      labels:
        app: remyperu
    spec:
      containers:
        - name: remyperu
          image: kilbiller/remyperu.fr
          ports:
            - containerPort: 8000
